--- a/app/src/main/res/layout-land/activity_velgregnestykker.xml
+++ b/app/src/main/res/layout-land/activity_velgregnestykker.xml
@@ -8,72 +8,76 @@
     tools:context=".MainActivity">
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="289dp"
-        android:layout_height="170dp"
-        android:layout_marginTop="80dp"
-        android:rotation="-4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/banner" />
-
     <TextView
         android:id="@+id/textView"
-        android:layout_width="236dp"
-        android:layout_height="89dp"
+        android:layout_width="403dp"
+        android:layout_height="104dp"
         android:layout_alignParentBottom="true"
         android:fontFamily="casual"
-        android:rotationX="10"
-        android:text="@string/tittel"
+        android:rotationX="0"
+        android:text="@string/velg_antall"
         android:textAlignment="center"
-        android:textFontWeight="20"
+        android:textFontWeight="1000"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.181" />
+        app:layout_constraintVertical_bias="0.133" />
 
     <Button
         android:id="@+id/StartSpill"
         android:layout_width="220dp"
         android:layout_height="150dp"
-        android:layout_marginBottom="440dp"
         android:fontFamily="casual"
-        android:text="@string/button_1"
-        android:textSize="40dp"
+        android:text="@string/regn5"
+        android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.938" />
 
     <Button
         android:id="@+id/Pref"
         android:layout_width="220dp"
         android:layout_height="150dp"
-        android:layout_marginBottom="104dp"
         android:fontFamily="casual"
-        android:text="@string/button_3"
-        android:textSize="30dp"
+        android:text="@string/regn15"
+        android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.926"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.938" />
+
+    <Button
+        android:id="@+id/tilbake"
+        android:layout_width="220dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="228dp"
+        android:fontFamily="casual"
+        android:text="@string/tilbake"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.926"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/OmSpill"
         android:layout_width="220dp"
         android:layout_height="150dp"
-        android:layout_marginBottom="272dp"
         android:fontFamily="casual"
-        android:text="@string/button_2"
-        android:textSize="30dp"
+        android:text="@string/regn10"
+        android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.938" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
