--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="orange">#D69E2F</color>
+    <color name="defualt">#6750a4</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
