massive improvement on the Spill page now equations are generated and a feedback is shown if it was a right answer or not. also when reached to the end (after 5,10,15) an alert pops up

--- a/app/src/main/res/layout/activity_spill.xml
+++ b/app/src/main/res/layout/activity_spill.xml
@@ -65,7 +65,8 @@
         android:layout_width="255dp"
         android:layout_height="134dp"
         android:layout_marginBottom="64dp"
-        android:text="Button"
+        android:textSize="40sp"
+        android:text="@string/sjekksvarknapp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -75,7 +76,7 @@
         android:id="@+id/tilbakemelding"
         android:layout_width="387dp"
         android:layout_height="270dp"
-        android:text="TextView"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
