fixed the feedback message, instead of having a substring to devide the equation string i now slpiced it to an array with elements and can use it to extract the numbers

--- a/app/src/main/res/layout/activity_spill.xml
+++ b/app/src/main/res/layout/activity_spill.xml
@@ -53,7 +53,7 @@
         android:ems="10"
         android:textSize="28sp"
         android:hint="@string/spillsvarHint"
-        android:inputType="numberDecimal"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
