everything is done, but changed the size of buttons and got rid of the back button since the phone already got one

--- a/app/src/main/res/layout-land/activity_spill.xml
+++ b/app/src/main/res/layout-land/activity_spill.xml
@@ -15,8 +15,9 @@
         android:text="@string/spørsmålTxt"
         android:textAlignment="center"
         android:textSize="48sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.006"
+        app:layout_constraintHorizontal_bias="0.024"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,6 +27,7 @@
         android:layout_height="78dp"
         android:layout_marginTop="16dp"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.286"
