--- a/app/src/main/res/layout/activity_om_spillet.xml
+++ b/app/src/main/res/layout/activity_om_spillet.xml
@@ -12,6 +12,7 @@
         android:layout_width="410dp"
         android:layout_height="70dp"
         android:text="@string/omspill"
+        android:textStyle="bold"
         android:textAlignment="center"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,29 +24,15 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="360dp"
-        android:layout_height="622dp"
+        android:layout_width="375dp"
+        android:layout_height="686dp"
         android:text="@string/omspillinfo"
-        android:textSize="28sp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.686"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.945" />
-
-    <Button
-        android:id="@+id/tilbake"
-        android:layout_width="236dp"
-        android:layout_height="137dp"
-        android:layout_marginBottom="84dp"
-        android:fontFamily="casual"
-        android:text="@string/tilbake"
-        android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintVertical_bias="0.929" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
