--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,20 +10,19 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="289dp"
-        android:layout_height="170dp"
+        android:layout_width="322dp"
+        android:layout_height="184dp"
         android:layout_marginTop="16dp"
         android:rotation="-4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/banner" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="236dp"
-        android:layout_height="89dp"
+        android:layout_width="261dp"
+        android:layout_height="106dp"
         android:layout_alignParentBottom="true"
         android:fontFamily="casual"
         android:rotationX="10"
@@ -33,19 +32,18 @@
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.254" />
+        app:layout_constraintVertical_bias="0.278" />
 
     <Button
         android:id="@+id/StartSpill"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
+        android:layout_width="250dp"
+        android:layout_height="170dp"
         android:layout_marginBottom="28dp"
         android:fontFamily="casual"
         android:text="@string/button_1"
-        android:textSize="40dp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.06"
@@ -53,12 +51,12 @@
 
     <Button
         android:id="@+id/Pref"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
+        android:layout_width="250dp"
+        android:layout_height="170dp"
         android:layout_marginBottom="28dp"
         android:fontFamily="casual"
         android:text="@string/button_3"
-        android:textSize="30dp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.943"
@@ -66,15 +64,14 @@
 
     <Button
         android:id="@+id/OmSpill"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="250dp"
+        android:layout_height="170dp"
+        android:layout_marginBottom="28dp"
         android:fontFamily="casual"
         android:text="@string/button_2"
-        android:textSize="30dp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
