--- a/app/src/main/res/layout-land/activity_om_spillet.xml
+++ b/app/src/main/res/layout-land/activity_om_spillet.xml
@@ -11,9 +11,11 @@
         android:id="@+id/textView3"
         android:layout_width="410dp"
         android:layout_height="70dp"
+        android:fontFamily="casual"
         android:text="@string/omspill"
         android:textAlignment="inherit"
         android:textSize="48sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.085"
@@ -23,29 +25,18 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="599dp"
-        android:layout_height="263dp"
+        android:layout_width="729dp"
+        android:layout_height="247dp"
+        android:fontFamily="casual"
         android:text="@string/omspillinfo"
         android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
+        app:layout_constraintHorizontal_bias="0.302"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.888" />
-
-    <Button
-        android:id="@+id/tilbake"
-        android:layout_width="236dp"
-        android:layout_height="137dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="casual"
-        android:text="@string/tilbake"
-        android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.973"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintVertical_bias="0.804" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
