--- a/app/src/main/res/layout-land/activity_velgregnestykker.xml
+++ b/app/src/main/res/layout-land/activity_velgregnestykker.xml
@@ -10,26 +10,25 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="403dp"
-        android:layout_height="104dp"
+        android:layout_width="751dp"
+        android:layout_height="152dp"
         android:layout_alignParentBottom="true"
         android:fontFamily="casual"
         android:rotationX="0"
         android:text="@string/velg_antall"
-        android:textAlignment="center"
-        android:textFontWeight="1000"
-        android:textSize="34sp"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintHorizontal_bias="0.245"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.133" />
+        app:layout_constraintVertical_bias="0.123" />
 
     <Button
         android:id="@+id/tall5"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
+        android:layout_width="240dp"
+        android:layout_height="180dp"
         android:fontFamily="casual"
         android:text="@string/regn5"
         android:textColorHighlight="#E35050"
@@ -37,42 +36,29 @@
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.938" />
+        app:layout_constraintVertical_bias="0.837" />
 
     <Button
         android:id="@+id/tall15"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
+        android:layout_width="240dp"
+        android:layout_height="180dp"
         android:fontFamily="casual"
         android:text="@string/regn15"
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.926"
+        app:layout_constraintHorizontal_bias="0.938"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.938" />
-
-    <Button
-        android:id="@+id/tilbake"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="228dp"
-        android:fontFamily="casual"
-        android:text="@string/tilbake"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.926"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintVertical_bias="0.839" />
 
     <Button
         android:id="@+id/tall10"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
+        android:layout_width="240dp"
+        android:layout_height="180dp"
         android:fontFamily="casual"
         android:text="@string/regn10"
         android:textSize="50sp"
@@ -80,6 +66,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.938" />
+        app:layout_constraintVertical_bias="0.839" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
