everything is done, but changed the size of buttons and got rid of the back button since the phone already got one now on vertical (last commit was landscape)

--- a/app/src/main/res/layout-land/activity_spill.xml
+++ b/app/src/main/res/layout-land/activity_spill.xml
@@ -12,12 +12,12 @@
         android:layout_width="254dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="casual"
         android:text="@string/spørsmålTxt"
-        android:textAlignment="center"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.024"
+        app:layout_constraintHorizontal_bias="0.065"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,6 +27,7 @@
         android:layout_height="78dp"
         android:layout_marginTop="16dp"
         android:textAlignment="center"
+        android:fontFamily="casual"
         android:textStyle="bold"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +41,8 @@
         android:layout_height="62dp"
         android:layout_marginTop="16dp"
         android:textAlignment="textStart"
+        android:fontFamily="casual"
+        android:textStyle="bold"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.713"
@@ -53,7 +56,9 @@
         android:ems="10"
         android:hint="@string/spillsvarHint"
         android:inputType="number"
+        android:fontFamily="casual"
         android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.934"
@@ -67,6 +72,8 @@
         android:layout_height="134dp"
         android:text="@string/sjekksvarknapp"
         android:textSize="40sp"
+        android:fontFamily="casual"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.842"
@@ -76,9 +83,11 @@
 
     <TextView
         android:id="@+id/tilbakemelding"
-        android:layout_width="312dp"
-        android:layout_height="266dp"
-        android:textSize="30sp"
+        android:layout_width="332dp"
+        android:layout_height="279dp"
+        android:fontFamily="casual"
+        android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.073"
