--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageView"
         android:layout_width="289dp"
         android:layout_height="170dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="56dp"
         android:rotation="-4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,16 +35,16 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.181" />
+        app:layout_constraintVertical_bias="0.151" />
 
     <Button
         android:id="@+id/StartSpill"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
+        android:layout_width="260dp"
+        android:layout_height="170dp"
         android:layout_marginBottom="440dp"
         android:fontFamily="casual"
         android:text="@string/button_1"
-        android:textSize="40dp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -52,28 +52,28 @@
 
     <Button
         android:id="@+id/Pref"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="104dp"
+        android:layout_width="260dp"
+        android:layout_height="170dp"
+        android:layout_marginBottom="44dp"
         android:fontFamily="casual"
         android:text="@string/button_3"
-        android:textSize="30dp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/OmSpill"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="272dp"
+        android:layout_width="260dp"
+        android:layout_height="170dp"
+        android:layout_marginBottom="240dp"
         android:fontFamily="casual"
         android:text="@string/button_2"
-        android:textSize="30dp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
