--- a/app/src/main/res/layout/activity_preferanser.xml
+++ b/app/src/main/res/layout/activity_preferanser.xml
@@ -11,38 +11,39 @@
         android:id="@+id/textView3"
         android:layout_width="414dp"
         android:layout_height="117dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="68dp"
+        android:fontFamily="casual"
         android:text="@string/pref"
         android:textAlignment="center"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/byttSprokButton"
-        android:layout_width="303dp"
-        android:layout_height="214dp"
-        android:layout_marginTop="272dp"
+        android:layout_width="370dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="216dp"
         android:fontFamily="casual"
         android:text="@string/bytt"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/antallButton"
-        android:layout_width="324dp"
-        android:layout_height="222dp"
-        android:layout_marginTop="508dp"
+        android:layout_width="370dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="532dp"
         android:fontFamily="casual"
         android:text="@string/velg_antall"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
