--- a/app/src/main/res/layout/activity_spill.xml
+++ b/app/src/main/res/layout/activity_spill.xml
@@ -13,6 +13,8 @@
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
         android:text="@string/spørsmålTxt"
+        android:textStyle="bold"
+        android:fontFamily="casual"
         android:textAlignment="center"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +27,9 @@
         android:layout_width="162dp"
         android:layout_height="79dp"
         android:layout_marginTop="76dp"
+        android:textStyle="bold"
         android:textAlignment="center"
+        android:fontFamily="casual"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -38,6 +42,8 @@
         android:layout_height="73dp"
         android:layout_marginTop="200dp"
         android:textAlignment="center"
+        android:textStyle="bold"
+        android:fontFamily="casual"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
@@ -51,6 +57,8 @@
         android:ems="10"
         android:textSize="28sp"
         android:hint="@string/spillsvarHint"
+        android:textStyle="bold"
+        android:fontFamily="casual"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,9 +70,11 @@
         android:id="@+id/sendSvar"
         android:layout_width="255dp"
         android:layout_height="134dp"
-        android:layout_marginBottom="64dp"
-        android:textSize="40sp"
+        android:layout_marginBottom="40dp"
+        android:fontFamily="casual"
         android:text="@string/sjekksvarknapp"
+
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -75,6 +85,8 @@
         android:layout_width="387dp"
         android:layout_height="270dp"
         android:textSize="30sp"
+        android:textStyle="bold"
+        android:fontFamily="casual"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
